Avion Projects/Momentum (App)/styles.css
*, *:before, *:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
  }

html {
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    font-weight: 600;
    color: white;
    scroll-behavior: smooth;
    height: 100%;
    width: 100%;
    background-image: url(assets/bg/Pragser\ Wildsee\,\ Italy\ |\ Photo\ by\ Pietro\ De\ Grandi\ on\ Unsplash.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position-y: center;
    background-position-x: center;
}

body, #container {
    height: 100%;
    width: 100%;
}

.icon-large {
    filter: invert();
    height: 30px;
    width: 30px;
    vertical-align: middle;
    display: none;
}

.icon-large:hover {
    border-radius: 100%;
    background: rgba(0, 0, 0, 0.2);
}

.icon-small {
    filter: invert();
    height: 18px;
    width: 18px;
    vertical-align: middle;
}

.icon-hover:hover {
    opacity: 0.4;
    filter: initial;
}

.checkbox {
    height: 50px;
    width: 50px;
    display: none;
}

/* Sections */
.top-row {
    height: 9%;
}

.center-above {
    height: 26%;
}

.center {
    height: 30%;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 2.5rem;
}

    .time {
        font-size: 9rem;
        margin-left: 50%;
        margin-right: 50%;
    }

    .name {
        background: 0;
        border: 0;
        color: white;
        outline-style: none;
    }

    .name:focus-visible {
        border-bottom: 2px solid #fff;
    }

    .greeting-container:hover .icon-large {
        display: initial;
    }

.center-below {
    height: 26%;
    font-size: 2rem;
    padding-top: 3.5%;
}
    #focus-container {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

        #focus-question {
            letter-spacing: 0.5px;
        }
    
        #focus-input {
            display: block;
            background: 0;
            border: 0;
            border-bottom: 2px solid #fff;
            color: white;
            font-size: 1.75rem;
            text-align: center;
            outline-style: none;
        }

    /* initial */
    #goal-container {
        display: none;
    }

    #focus-container {
        display: none;
    }

    /* On input submition */
    #goal-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding-top: 0.5%;
    }
        #goal-title {
            font-size: 1.25rem;
            padding-bottom: 0.5%;
        }

        #goal-div {
            display: flex;
            flex-direction: row;
            justify-content: center;
            align-items: center;
        }

            #goal-container:hover .checkbox {
                display: initial;
            }

            #goal-container:hover .icon-large {
                display: initial;
            }

            #goal-text {
                font-size: 2.6rem;
                padding-left: 7.5%;
                padding-right: 7.5%;
            }

            #goal-icon {
                height: 25px;
                width: 25px;
            }

.bottom-row {
    height: 9%;
    display: flex;
}

    #location-container {
        width: 20%;
        display: flex;
        flex-direction: column;
        left: 0;
        right: 0;
        justify-content: center;
        padding-left: 8px;
    }

        #location-details {
            width: 100%;
            display: flex;
            flex-direction: row;
            align-items: center;
        }

            #location {
                font-size: 0.85rem;
                padding-left: 2px;
            }

        #location-author-container {
            display: flex;
            flex-direction: row;
            align-items: center;
            font-size: 0.75rem;
            padding-left: 20.5px;
            opacity: 0;
            height: 0;
            overflow: hidden;
            transition: opacity 0.1s ease-in 25ms;
        }

        /* on hover */
        #location-container:hover #location-author-container {
            opacity: 1;
            height: auto;
        }

    #quotes-container {
        width: 60%;
        display: flex;
        align-items: center;
        justify-content: center;
        text-shadow: 0 1px 3px rgba(0, 0, 0, 0.219);
        text-align: center;
    }

        #quotes-text {
            position: relative;
            display: inline-block;
        }

        #quotes-addtl-container {
            display: flex;
            align-items: center;
            justify-content: center;
            opacity: 0;
            height: 0;
            overflow: hidden;
            transition: opacity 0.1s ease-in 25ms;
        }

            /* on hover */
            #quotes-container:hover #quotes-addtl-container {
                opacity: 1;
                height: auto;
            }
        
        /* Add Quotes Modal */
        #quotes-modal {
            display: none;
            position: fixed; 
            z-index: 1; 
            left: 0;
            top: 0;
            bottom: 0;
            width: 100%; 
            height: 100%; 
            overflow: auto; 
            background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
        }

            .modal-content {
                background-color: #fefefe;
                margin-left: auto;
                margin-right: auto;
                margin-top: 30vh;
                padding: 20px;
                border: 1px solid #888;
                width: 40%;
                display: flex;
                flex-direction: column;
                color: black;
            }

                .modal-content label {
                    text-align: left;
                }

                .modal-content label ~ label {
                    padding-top: 10px;
                }

                textarea, .modal-content > input {
                    resize: vertical;        
                    max-width: 100%;
                    font-family: 'Lato', sans-serif;
                    font-size: 1.25rem;
                }

                .modal-content > button {
                    min-width: 9vw;
                    height: 4vh;
                    margin-top: 10px;
                    margin-left: auto;
                    margin-right: auto;
                    font-family: 'Lato', sans-serif;
                    font-size: 1rem;
                    font-weight: bold;
                }

    #toDo-container {
        width: 20%;
        float:right;
    }

        #ToDo {
            float: right;
            position: absolute;
            padding-top: 3%;
            padding-left: 1%;
            padding-right: 1%;
            bottom: 2%;
            right: 2%;
            height: 8%;
            cursor: pointer;
        }

